Refactoring, Part I
Upgrade to Junit 5
Upgrade to Gradle 8.0
Remove dependency on NumberUtil library
Remove dependency on external 'BuildScripts' project
Upgrade Mockito
Reformat code